src/test/resources/public/input/typechecking/fail/incorrect_operand/fail03.jova
class Test{
  public int x;
  public bool foofoo(){
    bool ret;
    ret = true;
    return ret;
  }
}

class Main {

  public int main() {
    Test t;
    int b;

    b = b.x;
    b = b.foofoo();
    return 0;
  }

}